--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "version": 2,
-
+  "builds": [
+    {
+      "src": "server/server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "src": "/api/.*", "dest": "server/server.js" },
-    { "src": "/(.*)", "dest": "client/build/$1" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
