--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
