--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "cd client && npm install && npm run build && npm start",
   "outputDirectory": "client/dist",
   "framework": "react",
   "rewrites": [
