--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/api/index.js",
+    "start": "nodemon server/index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
