--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://image-of-the-day.vercel.app",
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
