--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://image-of-the-day.vercel.app/",
   "dependencies": {
+    "@leecheuk/react-google-login": "^5.4.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "jwt-decode": "^3.1.2",
